Fix Scheme Dark Mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: rgb(0, 0, 0);
+  background: #080f28;
 }
 
 a {
